--- a/packages/castle/package.json
+++ b/packages/castle/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "description": "A kafka based event listener",
+  "description": "A kafka and avro based event listener",
   "author": "Ivan Kerin <ikerin@gmail.com>",
   "repository": "git@github.com:ovotech/laminar.git",
   "license": "Apache-2.0",
