--- a/packages/avro-kafkajs/package.json
+++ b/packages/avro-kafkajs/package.json
@@ -8,22 +8,22 @@
   "repository": "git@github.com:ovotech/castle.git",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@types/jest": "^24.0.19",
-    "@types/node": "^12.11.1",
-    "@types/uuid": "^3.4.6",
-    "@typescript-eslint/eslint-plugin": "^2.4.0",
-    "@typescript-eslint/parser": "^2.4.0",
-    "eslint": "^6.5.1",
-    "eslint-config-prettier": "^6.4.0",
-    "jest": "^24.9.0",
-    "prettier": "^1.18.2",
-    "ts-jest": "^24.1.0",
-    "ts-node": "^8.4.1",
-    "ts-retry-promise": "^0.2.0",
-    "typescript": "^3.6.4",
-    "uuid": "^3.3.3",
     "@ovotech/build-docs": "^0.1.0",
-    "kafkajs": "^1.11.0"
+    "@types/jest": "^24.0.23",
+    "@types/node": "^12.12.14",
+    "@types/uuid": "^3.4.6",
+    "@typescript-eslint/eslint-plugin": "^2.10.0",
+    "@typescript-eslint/parser": "^2.10.0",
+    "eslint": "^6.7.2",
+    "eslint-config-prettier": "^6.7.0",
+    "jest": "^24.9.0",
+    "kafkajs": "^1.11.0",
+    "prettier": "^1.19.1",
+    "ts-jest": "^24.2.0",
+    "ts-node": "^8.5.4",
+    "ts-retry-promise": "^0.2.0",
+    "typescript": "^3.7.3",
+    "uuid": "^3.3.3"
   },
   "scripts": {
     "build:docs": "build-docs README.md",
@@ -41,6 +41,6 @@
   },
   "dependencies": {
     "@ovotech/schema-registry-api": "^1.0.5",
-    "avsc": "^5.4.15"
+    "avsc": "^5.4.16"
   }
 }
