--- a/packages/castle/package.json
+++ b/packages/castle/package.json
@@ -1,29 +1,29 @@
 {
   "name": "@ovotech/castle",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "description": "A kafka and avro based event listener",
   "author": "Ivan Kerin <ikerin@gmail.com>",
-  "repository": "git@github.com:ovotech/laminar.git",
+  "repository": "git@github.com:ovotech/castle.git",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@types/jest": "^24.0.19",
-    "@types/node": "^12.11.1",
+    "@types/jest": "^24.0.23",
+    "@types/node": "^12.12.14",
     "@types/pg": "^7.11.2",
     "@types/uuid": "^3.4.6",
-    "@typescript-eslint/eslint-plugin": "^2.4.0",
-    "@typescript-eslint/parser": "^2.4.0",
-    "eslint": "^6.5.1",
-    "eslint-config-prettier": "^6.4.0",
+    "@typescript-eslint/eslint-plugin": "^2.10.0",
+    "@typescript-eslint/parser": "^2.10.0",
+    "eslint": "^6.7.2",
+    "eslint-config-prettier": "^6.7.0",
     "jest": "^24.9.0",
-    "pg": "^7.12.1",
-    "prettier": "^1.18.2",
-    "slonik": "^20.1.3",
-    "ts-jest": "^24.1.0",
-    "ts-node": "^8.4.1",
-    "typescript": "^3.6.4",
+    "pg": "^7.14.0",
+    "prettier": "^1.19.1",
+    "slonik": "^21.4.1",
+    "ts-jest": "^24.2.0",
+    "ts-node": "^8.5.4",
     "ts-retry-promise": "^0.2.0",
+    "typescript": "^3.7.3",
     "uuid": "^3.3.3"
   },
   "scripts": {
