--- a/packages/castle/package.json
+++ b/packages/castle/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ovotech/castle",
-  "version": "0.1.4",
+  "version": "0.2.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "description": "A kafka and avro based event listener",
@@ -24,7 +24,8 @@
     "ts-node": "^8.5.4",
     "ts-retry-promise": "^0.2.0",
     "typescript": "^3.7.3",
-    "uuid": "^3.3.3"
+    "uuid": "^3.3.3",
+    "winston": "^3.2.1"
   },
   "scripts": {
     "build": "tsc --declaration",
