--- a/packages/blaise/package.json
+++ b/packages/blaise/package.json
@@ -25,9 +25,12 @@
     "url": "git+https://github.com/ovotech/castle.git"
   },
   "scripts": {
-    "build": "tsc",
-    "lint": "tslint -p .",
-    "test": "jest --verbose src/* --passWithNoTests"
+    "build": "tsc --declaration",
+    "build:docs": "build-docs README.md",
+    "test": "jest test --runInBand",
+    "lint:prettier": "prettier --check src/**/*.ts",
+    "lint:eslint": "eslint '{src,test}/**/*.ts'",
+    "lint": "yarn lint:prettier && yarn lint:eslint"
   },
   "bugs": {
     "url": "https://github.com/ovotech/castle/issues"
@@ -39,14 +42,15 @@
     "@ovotech/avro-kafkajs": "^0.1.3",
     "@ovotech/castle": "^0.3.0",
     "@types/lodash.merge": "^4.6.6",
+    "@typescript-eslint/eslint-plugin": "^2.15.0",
+    "@typescript-eslint/parser": "^2.15.0",
     "avsc": "^5.4.18",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.9.0",
     "jest": "^24.9.0",
     "prettier": "^1.19.1",
     "ts-essentials": "^4.0.0",
     "ts-jest": "^24.3.0",
-    "tslint": "^5.20.1",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-plugin-prettier": "^2.1.0",
     "typescript": "^3.7.4"
   },
   "dependencies": {
