--- a/packages/blaise/package.json
+++ b/packages/blaise/package.json
@@ -49,13 +49,13 @@
     "eslint-config-prettier": "^6.9.0",
     "jest": "^24.9.0",
     "prettier": "^1.19.1",
-    "ts-essentials": "^4.0.0",
     "ts-jest": "^24.3.0",
     "typescript": "^3.7.4"
   },
   "dependencies": {
     "@ovotech/avro-mock-generator": "^1.1.3",
-    "lodash.merge": "^4.6.2"
+    "lodash.merge": "^4.6.2",
+    "ts-essentials": "^4.0.0"
   },
   "peerDependencies": {
     "@ovotech/castle": ">=0.3"
