--- a/packages/castle/package.json
+++ b/packages/castle/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ovotech/castle",
-  "version": "0.3.1",
+  "version": "0.4.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "description": "A kafka and avro based event listener",
@@ -9,6 +9,7 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@types/jest": "^24.0.24",
+    "@types/lodash.chunk": "^4.2.6",
     "@types/node": "^13.1.0",
     "@types/pg": "^7.14.0",
     "@types/uuid": "^3.4.6",
@@ -40,6 +41,7 @@
   },
   "dependencies": {
     "@ovotech/avro-kafkajs": "^0.1.4",
-    "kafkajs": "^1.12.0"
+    "kafkajs": "^1.12.0",
+    "lodash.chunk": "^4.2.0"
   }
 }
