--- a/packages/avro-ts-cli/package.json
+++ b/packages/avro-ts-cli/package.json
@@ -1,43 +1,40 @@
 {
   "name": "@ovotech/avro-ts-cli",
   "description": "A cli to convert avro schemas into typescript interfaces",
-  "version": "1.3.1",
+  "version": "2.0.0",
   "main": "dist/index.js",
   "source": "src/index.ts",
   "types": "dist/index.d.ts",
   "author": "Ivan Kerin <ikerin@gmail.com>",
   "license": "Apache-2.0",
   "bin": {
-    "avro-ts": "./scripts/avro-ts"
+    "avro-ts": "./dist/avro-ts.js"
   },
   "scripts": {
-    "test": "jest --runInBand",
-    "lint-prettier": "prettier --list-different {src,test}/**/*.ts",
-    "lint-tslint": "tslint --config tslint.json '{src,test}/**/*.ts'",
-    "lint": "yarn lint-prettier && yarn lint-tslint",
-    "build": "tsc --outDir dist --declaration",
-    "avro-ts-cli": "ts-node src/cli.ts"
-  },
-  "dependencies": {
-    "@ovotech/avro-ts": "^3.1.0",
-    "yargs": "^13.2.4",
-    "chalk": "^2.4.2"
-  },
-  "devDependencies": {
-    "@types/capture-console": "^1.0.0",
-    "@types/jest": "^24.0.13",
-    "@types/node": "^11.11.4",
-    "@types/yargs": "^13.0.0",
-    "capture-console": "^1.0.1",
-    "jest": "^24.8.0",
-    "prettier": "^1.17.1",
-    "ts-jest": "^24.0.2",
-    "ts-node": "^8.2.0",
-    "tslint": "^5.17.0",
-    "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.5.1"
+    "avro-ts": "node -r ts-node/register src/avro-ts.ts",
+    "build": "tsc --declaration",
+    "build:docs": "build-docs README.md",
+    "test": "jest test --runInBand",
+    "lint:prettier": "prettier --list-different {src,test}/**/*.ts",
+    "lint:eslint": "eslint '{src,test}/**/*.ts'",
+    "lint": "yarn lint:prettier && yarn lint:eslint"
   },
   "jest": {
-    "preset": "../../jest-preset.json"
+    "preset": "../../jest.json"
+  },
+  "dependencies": {
+    "@ovotech/avro-ts": "^4.0.0",
+    "commander": "^4.0.1",
+    "chalk": "^3.0.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^24.0.24",
+    "@types/node": "^13.1.0",
+    "jest": "^24.9.0",
+    "prettier": "^1.19.1",
+    "ts-jest": "^24.3.0",
+    "ts-node": "^8.5.4",
+    "typescript": "^3.7.4",
+    "ansi-regex": "^5.0.0"
   }
 }
