--- a/packages/avro-ts-cli/tsconfig.json
+++ b/packages/avro-ts-cli/tsconfig.json
@@ -1,5 +1,9 @@
 {
-  "extends": "../../tsconfig.base.json",
+  "extends": "../../tsconfig.json",
+  "compilerOptions": {
+    "outDir": "dist",
+    "resolveJsonModule": true
+  },
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
 }
