--- a/packages/avro-ts-cli/package.json
+++ b/packages/avro-ts-cli/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ovotech/avro-ts-cli",
   "description": "A cli to convert avro schemas into typescript interfaces",
-  "version": "2.0.1",
+  "version": "2.1.0",
   "main": "dist/index.js",
   "source": "src/index.ts",
   "types": "dist/index.d.ts",
@@ -23,18 +23,18 @@
     "preset": "../../jest.json"
   },
   "dependencies": {
-    "@ovotech/avro-ts": "^4.0.0",
-    "commander": "^4.0.1",
-    "chalk": "^3.0.0"
+    "@ovotech/avro-ts": "^4.1.0",
+    "chalk": "^3.0.0",
+    "commander": "^4.1.1"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.24",
-    "@types/node": "^13.1.0",
-    "jest": "^24.9.0",
+    "@types/jest": "^25.1.3",
+    "@types/node": "^13.7.6",
+    "ansi-regex": "^5.0.0",
+    "jest": "^25.1.0",
     "prettier": "^1.19.1",
-    "ts-jest": "^24.3.0",
-    "ts-node": "^8.5.4",
-    "typescript": "^3.7.4",
-    "ansi-regex": "^5.0.0"
+    "ts-jest": "^25.2.1",
+    "ts-node": "^8.6.2",
+    "typescript": "^3.8.2"
   }
 }
