--- a/packages/avro-kafkajs/package.json
+++ b/packages/avro-kafkajs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ovotech/avro-kafkajs",
-  "version": "0.2.2",
+  "version": "0.3.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "description": "A wrapper around Kafkajs to transparently use Schema Registry for producing and consuming messages with avro schemas.",
@@ -19,6 +19,7 @@
     "jest": "^25.2.6",
     "kafkajs": "^1.12.0",
     "prettier": "^2.0.2",
+    "stream-mock": "^2.0.5",
     "ts-jest": "^25.3.0",
     "ts-node": "^8.8.1",
     "ts-retry-promise": "^0.3.1",
