--- a/packages/castle-stream/package.json
+++ b/packages/castle-stream/package.json
@@ -8,21 +8,21 @@
   "repository": "git@github.com:ovotech/castle.git",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@types/jest": "^25.1.4",
-    "@types/node": "^13.9.8",
-    "@types/uuid": "^7.0.2",
-    "@typescript-eslint/eslint-plugin": "^2.26.0",
-    "@typescript-eslint/parser": "^2.26.0",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.1",
-    "jest": "^25.2.6",
-    "prettier": "^2.0.2",
-    "ts-jest": "^25.3.0",
-    "ts-node": "^8.8.1",
+    "@types/jest": "^25.2.3",
+    "@types/node": "^14.0.5",
+    "@types/uuid": "^8.0.0",
+    "@typescript-eslint/eslint-plugin": "^3.0.2",
+    "@typescript-eslint/parser": "^3.0.2",
+    "eslint": "^7.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "jest": "^26.0.1",
+    "prettier": "^2.0.5",
     "stream-mock": "^2.0.5",
-    "uuid": "^7.0.3",
-    "ts-retry-promise": "^0.3.1",
-    "typescript": "^3.8.3"
+    "ts-jest": "^26.0.0",
+    "ts-node": "^8.10.1",
+    "ts-retry-promise": "^0.4.0",
+    "typescript": "^3.8.3",
+    "uuid": "^8.1.0"
   },
   "scripts": {
     "build": "tsc --declaration",
