--- a/packages/avro-ts-cli/package.json
+++ b/packages/avro-ts-cli/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ovotech/avro-ts-cli",
   "description": "A cli to convert avro schemas into typescript interfaces",
-  "version": "2.1.3",
+  "version": "2.2.1",
   "main": "dist/index.js",
   "source": "src/index.ts",
   "types": "dist/index.d.ts",
@@ -23,18 +23,18 @@
     "preset": "../../jest.json"
   },
   "dependencies": {
-    "@ovotech/avro-ts": "^4.1.2",
-    "chalk": "^4.0.0",
-    "commander": "^5.0.0",
-    "ansi-regex": "^5.0.0"
+    "@ovotech/avro-ts": "^4.2.1",
+    "ansi-regex": "^5.0.0",
+    "chalk": "^4.1.0",
+    "commander": "^5.1.0"
   },
   "devDependencies": {
-    "@types/jest": "^25.2.3",
-    "@types/node": "^14.0.5",
-    "jest": "^26.0.1",
+    "@types/jest": "^26.0.3",
+    "@types/node": "^14.0.14",
+    "jest": "^26.1.0",
     "prettier": "^2.0.5",
-    "ts-jest": "^26.0.0",
-    "ts-node": "^8.10.1",
-    "typescript": "^3.8.3"
+    "ts-jest": "^26.1.1",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.6"
   }
 }
