--- a/packages/avro-ts/package.json
+++ b/packages/avro-ts/package.json
@@ -1,12 +1,14 @@
 {
   "name": "@ovotech/avro-ts",
   "description": "Convert avro schemas into typescript interfaces",
-  "version": "5.1.0",
+  "version": "5.1.1",
   "main": "dist/index.js",
   "source": "src/index.ts",
   "types": "dist/index.d.ts",
   "author": "Ivan Kerin <ikerin@gmail.com>",
   "license": "Apache-2.0",
+  "repository": "git@github.com:ovotech/castle.git",
+  "homepage": "https://github.com/ovotech/castle/tree/master/packages/avro-ts#readme",
   "scripts": {
     "test:js": "jest --runInBand",
     "test:ts": "tsc test/integration.ts --strict --noEmit && ! tsc test/integration-should-fail.ts --strict --noEmit",
