--- a/packages/avro-timestamp-millis/package.json
+++ b/packages/avro-timestamp-millis/package.json
@@ -1,12 +1,14 @@
 {
   "name": "@ovotech/avro-timestamp-millis",
   "description": "A logical type representing Date as long number",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "main": "dist/index.js",
   "source": "src/index.ts",
   "types": "dist/index.d.ts",
   "author": "Ivan Kerin <ikerin@gmail.com>",
   "license": "Apache-2.0",
+  "repository": "git@github.com:ovotech/castle.git",
+  "homepage": "https://github.com/ovotech/castle/tree/master/packages/avro-timestamp-millis#readme",
   "scripts": {
     "test": "jest --runInBand",
     "lint:prettier": "prettier --list-different {src,test}/**/*.ts",
