--- a/packages/avro-ts-cli/package.json
+++ b/packages/avro-ts-cli/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ovotech/avro-ts-cli",
   "description": "A cli to convert avro schemas into typescript interfaces",
-  "version": "3.1.0",
+  "version": "3.1.1",
   "main": "dist/index.js",
   "source": "src/index.ts",
   "types": "dist/index.d.ts",
@@ -10,6 +10,8 @@
   "bin": {
     "avro-ts": "./scripts/avro-ts"
   },
+  "repository": "git@github.com:ovotech/castle.git",
+  "homepage": "https://github.com/ovotech/castle/tree/master/packages/avro-ts-cli#readme",
   "scripts": {
     "avro-ts": "node -r ts-node/register src/cli.ts",
     "build": "tsc --declaration",
@@ -23,7 +25,7 @@
     "preset": "../../jest.json"
   },
   "dependencies": {
-    "@ovotech/avro-ts": "^5.1.0",
+    "@ovotech/avro-ts": "^5.1.1",
     "ansi-regex": "^5.0.0",
     "chalk": "^4.1.0",
     "commander": "^5.1.0"
