--- a/packages/castle-cli/package.json
+++ b/packages/castle-cli/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@ovotech/castle-cli",
-  "version": "0.5.2",
+  "version": "0.5.3",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "description": "A kafka avro cli",
   "author": "Ivan Kerin <ikerin@gmail.com>",
   "repository": "git@github.com:ovotech/castle.git",
+  "homepage": "https://github.com/ovotech/castle/tree/master/packages/castle-cli#readme",
   "license": "Apache-2.0",
   "devDependencies": {
     "@types/jest": "^26.0.3",
@@ -38,7 +39,7 @@
     "preset": "../../jest.json"
   },
   "dependencies": {
-    "@ovotech/avro-kafkajs": "^0.5.1",
+    "@ovotech/avro-kafkajs": "^0.5.2",
     "ansi-regex": "^5.0.0",
     "chalk": "^4.1.0",
     "commander": "^5.1.0",
