--- a/packages/castle-stream/package.json
+++ b/packages/castle-stream/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@ovotech/castle-stream",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "description": "A node stream implementation of castle",
   "author": "Ivan Kerin <ikerin@gmail.com>",
   "repository": "git@github.com:ovotech/castle.git",
+  "homepage": "https://github.com/ovotech/castle/tree/master/packages/castle-stream#readme",
   "license": "Apache-2.0",
   "devDependencies": {
     "@types/jest": "^26.0.3",
@@ -36,6 +37,6 @@
     "preset": "../../jest.json"
   },
   "dependencies": {
-    "@ovotech/castle": "^0.5.0"
+    "@ovotech/castle": "^0.5.2"
   }
 }
