Add "long" library to avro-kafkajs dependencies
Avro-KafkaJS is using this library, but it was not explicitly listed in the dependencies.

--- a/packages/avro-kafkajs/package.json
+++ b/packages/avro-kafkajs/package.json
@@ -44,6 +44,7 @@
   },
   "dependencies": {
     "@ovotech/schema-registry-api": "^1.0.7",
-    "avsc": "^5.4.22"
+    "avsc": "^5.4.22",
+    "long": "^4.0.0"
   }
 }
