--- a/packages/avro-kafkajs/package.json
+++ b/packages/avro-kafkajs/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@ovotech/build-docs": "^0.1.0",
     "@types/jest": "^26.0.14",
+    "@types/long": "^4.0.1",
     "@types/node": "^14.11.2",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
