--- a/packages/avro-epoch-days/package.json
+++ b/packages/avro-epoch-days/package.json
@@ -19,11 +19,13 @@
   },
   "devDependencies": {
     "avsc": "^5.5.3",
-    "eslint-config-prettier": "^6.15.0",
+    "eslint": "^7.20.0",
+    "eslint-config-prettier": "^7.2.0",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
-    "ts-jest": "^26.4.4",
-    "ts-node": "^9.0.0"
+    "ts-jest": "^26.5.1",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.2"
   },
   "peerDependencies": {
     "avsc": "^5.5.3"
