--- a/packages/blaise/package.json
+++ b/packages/blaise/package.json
@@ -9,7 +9,7 @@
     "mock",
     "kafka"
   ],
-  "author": "Nicolas Lagoutte <nicolas.lagoutte@ovoenergy.com>",
+  "author": "Nicolas Lagoutte <nicolas.lagoutte@kaluza.com>",
   "homepage": "https://github.com/ovotech/castle#readme",
   "license": "Apache-2.0",
   "main": "dist/index.js",
@@ -53,11 +53,11 @@
     "typescript": "^4.1.2"
   },
   "dependencies": {
-    "@ovotech/avro-mock-generator": "^2.0.3",
     "lodash.merge": "^4.6.2",
     "ts-essentials": "^7.0.0"
   },
   "peerDependencies": {
+    "@ovotech/avro-mock-generator": "^2.0.3 || ^3.0.0",
     "@ovotech/castle": ">=0.3"
   }
 }
