--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ commands:
 jobs:
   test:
     docker:
-      - image: cimg/node:22
+      - image: cimg/node:lts
       - image: confluentinc/cp-zookeeper:5.0.1
         environment:
           ZOOKEEPER_CLIENT_PORT: 2181
@@ -54,7 +54,7 @@ jobs:
 
   publish:
     docker:
-      - image: cimg/node:22
+      - image: cimg/node:lts
     steps:
       - checkout
       - yarn-install
