--- a/packages/avro-kafkajs/package.json
+++ b/packages/avro-kafkajs/package.json
@@ -20,7 +20,7 @@
     "eslint": "^7.20.0",
     "eslint-config-prettier": "^7.2.0",
     "jest": "^29.7.0",
-    "kafkajs": "^1.15.0",
+    "kafkajs": "1.15.0",
     "prettier": "^2.2.1",
     "stream-mock": "^2.0.5",
     "ts-jest": "^29.2.6",
