chore: Version lock kafkajs to 1.15

--- a/packages/avro-kafkajs/package.json
+++ b/packages/avro-kafkajs/package.json
@@ -41,7 +41,7 @@
     "preset": "../../jest.json"
   },
   "peerDependencies": {
-    "kafkajs": "^1.15.0"
+    "kafkajs": "1.15.0"
   },
   "dependencies": {
     "@ovotech/schema-registry-api": "^1.1.1",
